--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -45,18 +45,20 @@ form {
     align-items: center; /* Center the form horizontally */
     justify-content: center; /* Center the form vertically */
     margin-top: 20px;
+    position: relative;
 }
 .options {
+    display: none;
     width: 833px;
     height: 589px;
     flex-shrink: 0;
     border-radius: 6px;
     background: #D9D9D9;
     mix-blend-mode: hard-light;
-    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 h2 {
     width: 100%; /*
@@ -141,4 +143,53 @@ button{
     background: #FFF;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     text-align: center;
+    margin: 20px;
+}
+
+/* abwesenheit protokollieren,löscjen, ansehen*/
+.action-content {
+    display: none;
+    box-sizing: border-box;
+    width: 833px;
+    height: 589px;
+    flex-shrink: 0;
+    border-radius: 6px;
+    background: #D9D9D9;
+    mix-blend-mode: hard-light;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    position: relative;
+}
+
+.AbsenceTitle {
+    font-family: "Arial Black";
+    color: #537DE0;
+    text-align: center;
+    text-shadow: 10px 10px 50px rgba(0, 0, 0, 0.30);
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.goback{
+    width: 36.5px;
+    height: 39.5px;
+    flex-shrink: 0;
+    fill: #D9D9D9;
+    stroke-width: 1px;
+    stroke: #000;
+}
+/*button*/
+.goback {
+    background: transparent;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.goback svg {
+    margin-right: 5px;
 }
