--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -138,6 +138,7 @@ button{
 .action-content {
     display: none;
     box-sizing: border-box;
+    flex-direction: column;
     width: 833px;
     height: 589px;
     flex-shrink: 0;
@@ -146,10 +147,11 @@ button{
     mix-blend-mode: hard-light;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
     position: relative;
     padding-left: 10px !important;
     padding-right: 10px !important;
+    margin-top: -20px; /* Adjust as needed */
+
 }
 
 .AbsenceTitle {
@@ -161,6 +163,7 @@ button{
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    margin-top: -60px;
 }
 .goback{
     width: 36.5px;
@@ -169,15 +172,14 @@ button{
     fill: #D9D9D9;
     stroke-width: 1px;
     stroke: #000;
-}
-/*button*/
-.goback {
+    /*align-self: flex-start;*/
     background: transparent;
     border: none;
     padding: 0;
     cursor: pointer;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
 }
 
 .goback svg {
@@ -230,4 +232,20 @@ label[for="student"]{
     border-radius: 25px;
     background: #FFF;
 
+}
+#logAbsenceContent {
+    display: none;
+    box-sizing: border-box;
+    width: 833px;
+    height: 589px;
+    flex-shrink: 0;
+    border-radius: 6px;
+    background: #D9D9D9;
+    mix-blend-mode: hard-light;
+    align-items: center;
+    justify-content: flex-start; /* Adjust as needed */
+    margin-top: 20px;
+    position: relative;
+    padding-left: 10px !important;
+    padding-right: 10px !important;
 }
